--- a/blocks/intro.css
+++ b/blocks/intro.css
@@ -1,31 +1,86 @@
 .intro{
-margin: 0 115px 0 148px;
+    margin: 0 0 0 140px;
+    max-width: 80%;
+    display: flex;
+    flex-direction: column;
+    row-gap: 40px;
 }
 
 .intro__title{
     font-size: 54px;
     font-family: "inter";
-    font-weight: 900;
-
-    text-align:justify;
-    margin:0 0 40px 0;
+    font-weight: 900;  
+    margin: 0;
 }
 
 .intro__quote{
     font-size: 24px;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    padding-right: 295px;
+}
+
+.intro__quote__paragraph{
+    font-size: 24px;
     font-family: "inter";
     font-weight: 400;
-    margin-right: 295px;
+    margin: 0;
 }
 
 .intro__quote__autor{
-    text-align: end;
-    margin-top: 0;
-}
+    
+    position: absolute;
+    top: calc(80%);
+
+    align-self: end;
+    margin: 0;
+} 
+
 
 .intro__paragraph{
     font-size: 16px;
     font-family: "inter";
     font-weight: 400;
-    margin: 0 297px 0 0;
+    padding-right: 295px;
+} 
+
+@media screen and (max-width: 840px){
+    .intro{
+        margin: 0 24px 0 24px;
+        max-width: 100%;
+    }
+    
+    .intro__quote{
+        padding: 0;
+    }
+    
+    .intro__paragraph{
+        padding: 0;
+    } 
+}
+
+@media screen and (max-width: 839px) and (min-width: 50px){
+    .intro{
+        margin: 0 16px 0 16px;
+        max-width: 100%;
+    }
+
+    .intro__title{
+        font-size: 32px;
+    }
+    
+    .intro__quote{
+        padding: 0;
+        display: block;
+    }
+    
+    .intro__quote__autor{
+        position: relative;
+        text-align: end;
+    } 
+
+    .intro__paragraph{
+        padding: 0;
+    } 
 }
