--- a/blocks/photogrid.css
+++ b/blocks/photogrid.css
@@ -3,7 +3,7 @@
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: auto;
     grid-gap: 16px;
-
+    margin: auto;
     padding: 0 48px;
 }
 
@@ -11,3 +11,34 @@
     display: flex;
     max-width: 100%;
 }
+
+
+@media screen and (max-width:768px) {
+    .photo-grid{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: auto;
+        grid-gap: 16px;
+        margin: auto;
+        padding: 0 48px;
+    }
+    
+    .photo-grid__item{
+        display: flex;
+        max-width: 100%;
+    }
+}
+
+@media screen and (max-width:400px) and (min-width:50px) {
+    .photo-grid{
+        display: flex;
+        flex-direction: column;
+        row-gap: 16px;
+    }
+    
+    .photo-grid__item{
+         display: flex;
+        max-width: 100%;
+    }
+}
+
