--- a/blocks/places.css
+++ b/blocks/places.css
@@ -1,16 +1,14 @@
 .places{
     margin: 0 148px;
-    display: flex;
-    flex-direction: column;
-    row-gap: 40px;
 }
 
 .places__item{
 display: grid;
-grid-template-columns: repeat(2, 1fr);
-grid-template-rows: 1r 1fr 2fr 1fr;
-/* grid-column-gap:40px; */
-grid-row-gap:48px;
+grid-template-columns: 340px 1fr;
+grid-template-rows: auto auto 340px auto;
+column-gap: 40px;
+row-gap: 48px;
+justify-content: space-between;
 }
 
 .places__title{
@@ -19,6 +17,7 @@ grid-row-gap:48px;
     grid-column: 1;
     grid-row: 1/3;
     margin: 0;
+    width: 50%;
 }
 
 .places__title__USA{
@@ -27,13 +26,15 @@ grid-row-gap:48px;
     grid-column: 1/3;
     grid-row: 1/3;
     margin: 0;
-
+    width: 100%;
 }
 
 .places__image{
     grid-column: 1;
-    grid-row: 3/5;
-    margin: 0;
+    grid-row: 3;
+
+    display: flex;
+    max-width: 100%;
 }
 
 .places__artist{
@@ -51,7 +52,7 @@ grid-row-gap:48px;
 
 .places__paragraph{
     grid-column: 2;
-    grid-row: 3/5;
+    grid-row: 3/-1;
     margin: 0;
     line-height: 29.34px;
 }
@@ -63,22 +64,122 @@ grid-row-gap:48px;
     font-weight: 600px ;
     border: none;
     border-radius: 4px;
-    width: 355px;
+    max-width: 100%;
+    max-width: 355px;
     height: 48px;
 
-    grid-column: 1;
-    grid-row: 5;
-}
-
-.places__button__burundi{
-    background: #0278FE;
-    color: #FFFFFF;
-    font-weight: 600px ;
-    border: none;
-    border-radius: 4px;
-    width: 355px;
-    height: 48px;
+    align-self: start;
 
     grid-column: 1;
     grid-row: 4;
+}
+
+.places__button:hover{
+cursor: pointer;
+}
+
+@media screen and (max-width:1000px) and (min-width:768px) {
+
+    .places{
+        margin: 0 24px;
+    }
+
+    .places__item{
+        display: grid;
+        grid-template-columns: 340px 1fr;
+        grid-template-rows: auto auto 340px max-content;
+        column-gap: 28px;
+        row-gap: 0;
+        
+    }
+
+    .places__title{
+        font-size: 42px;
+        width: 100%;
+        /* margin: 0; */
+
+        grid-column: 1;
+        grid-row: 1;
+    }
+
+    .places__artist{
+        grid-column: 2;
+        grid-row: 1;
+    }
+    
+    .places__artist__name{
+        grid-column: 2;
+        grid-row: 1;
+    }
+
+    .places__paragraph{
+        font-size: 16px;
+        grid-column: 2;
+        grid-row: 2/-1;
+        /* margin: 0; */
+        line-height: 26px;
+    }
+
+    .places__image{
+        max-width: 340px;
+        max-height: 340px;
+        display: flex;
+        max-width: 100%;
+        grid-column: 1;
+        grid-row: 2;
+        margin: auto;
+    }
+
+    .places__button{    
+        grid-column: 1;
+        grid-row: 3;
+        margin-top: 48px;
+    }
+}
+
+@media screen and (max-width:767px) and (min-width:50px){
+
+    .places{
+        margin: 0;
+    }
+
+    .places__item{
+        display: flex;
+        flex-direction: column;
+        margin: 0 16px;
+        row-gap: 0;
+    }
+
+    .places__title{
+        font-size: 32px;
+        width: 100%;
+        margin: 0;
+    }
+
+    .places__paragraph{
+        font-size: 16px;
+
+        margin: 0;
+        line-height: 26px;
+    }
+
+    .places__image{
+        max-width: 320px;
+        max-height: 320px;
+        max-width: 100%;
+    }
+
+    .places__button{
+        background: #0278FE;
+        color: #FFFFFF;
+        font-weight: 600px ;
+        border: none;
+        border-radius: 4px;
+        width: 288px;
+        height: 48px;
+        width: 100%;
+    
+        grid-column: 1;
+        grid-row: 5;
+    }
 }
