--- a/blocks/places.css
+++ b/blocks/places.css
@@ -8,7 +8,7 @@ grid-template-columns: 340px 1fr;
 grid-template-rows: auto auto 340px auto;
 column-gap: 40px;
 row-gap: 48px;
-justify-content: space-between;
+padding-bottom: 40px;
 }
 
 .places__title{
@@ -87,7 +87,7 @@ cursor: pointer;
     .places__item{
         display: grid;
         grid-template-columns: 340px 1fr;
-        grid-template-rows: auto auto 340px max-content;
+        grid-template-rows: auto auto auto;
         column-gap: 28px;
         row-gap: 0;
         
@@ -96,8 +96,6 @@ cursor: pointer;
     .places__title{
         font-size: 42px;
         width: 100%;
-        /* margin: 0; */
-
         grid-column: 1;
         grid-row: 1;
     }
@@ -116,7 +114,6 @@ cursor: pointer;
         font-size: 16px;
         grid-column: 2;
         grid-row: 2/-1;
-        /* margin: 0; */
         line-height: 26px;
     }
 
@@ -178,7 +175,6 @@ cursor: pointer;
         width: 288px;
         height: 48px;
         width: 100%;
-    
         grid-column: 1;
         grid-row: 5;
     }
