--- a/blocks/cover.css
+++ b/blocks/cover.css
@@ -21,8 +21,9 @@
     row-gap: 32px;
     text-align: center;
     z-index: 2;
-
-    position: absolute;    
+    position: absolute; 
+    top: auto;   
+    left: auto;
     align-self: center;
     
 }
@@ -40,7 +41,7 @@
 .cover__button{
     background: #0278FE;
     color: #FFFFFF;
-    font-weight: 600px ;
+    font-weight: 600;
     border: none;
     border-radius: 4px;
     width: 198px;
