--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,23 +1,17 @@
-.page{
-    
-    font-family: "Inter";
-    font-size: 18px;
-    
-    color: #fff;    
-    background-color: #2A2C2F;
-    max-width: 1280px;
-
-    display: flex; 
-    flex-direction: column;
-    row-gap: 92px;
-    margin: auto;
-
-} 
-
-.content{
-    display: flex; 
-    flex-direction: column;
-    row-gap: 92px
+.page {
+  font-family: "Inter";
+  font-size: 18px;
+  color: #fff;
+  background-color: #2a2c2f;
+  max-width: 1280px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 92px;
+  margin: auto;
 }
 
-
+.content {
+  display: flex;
+  flex-direction: column;
+  row-gap: 92px;
+}
