--- a/blocks/places.css
+++ b/blocks/places.css
@@ -146,7 +146,7 @@
     margin: 0;
   }
 
-  .places__paragraph {
+  .places__paragraph__edit {
     font-size: 16px;
     margin: 0;
     line-height: 26px;
