--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,13 +1,13 @@
 @font-face {
     font-family: "Inter";
-    src: url(./Inter-Regular.woff2) format("woff2");
+    src: url(./Inter-VariableFont_slnt\,wght.ttf) format("woff2");
     font-style: normal;
     font-weight: 400;
   }
   
   @font-face {
     font-family: "Inter";
-    src: url(./Inter-Bold.woff2) format("woff2");
+    src: url(./Inter-Black.ttf) format("woff2");
     font-style: bold;
     font-weight: 900;
   }
