--- a/blocks/lead.css
+++ b/blocks/lead.css
@@ -2,8 +2,12 @@
   font-size: 96px;
   font-family: "inter";
   font-weight: 900;
-   text-align: center;
+  text-align: center;
   margin: 0;  
+}
+
+.lead__title__edit{
+  margin: 0;
 }
 
 .lead__subtitle {
