--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,21 +1,21 @@
-.header__vectors {
+.header__logo-vectors {
   display: flex;
   flex-direction: column;
   position: relative;
 }
 
-.header__icon {
+.header__logo-icon {
   margin: 34px auto 0 auto;
   position: relative;
 }
 
-.header__icon__line__horizontal {
+.header__logo-line--horizontal {
   position: absolute;
   top: 40px;
   left: calc((100% - 32px) / 2);
 }
 
-.header__icon__line__vertical {
+.header__logo-line--vertical {
   position: absolute;
   top: 40px;
   left: calc((100% - 11px) / 2);
@@ -25,22 +25,22 @@
   display: flex;
   column-gap: 6px;
   justify-content: center;
-  margin-top: 22.45px;
+  padding-top: 22.45px;
 }
 
-.header__letras__practicum {
+.header__letras--practicum {
   display: flex;
   justify-content: center;
-  margin-top: 0;
+  padding-top: 0;
   column-gap: 0;
 }
 
-.header__letras__art {
+.header__letras-art {
   display: flex;
   justify-content: center;
 }
 
-.header__letras__gallery {
+.header__letras-gallery {
   display: flex;
   justify-content: center;
 }
