--- a/blocks/cover.css
+++ b/blocks/cover.css
@@ -40,13 +40,18 @@
 
 .cover__button {
   background: #0278fe;
-  color: #ffffff;
-  font-weight: 600;
   border: none;
   border-radius: 4px;
   width: 198px;
   height: 48px;
   margin: 0 auto;
+}
+
+.cover__button-link{
+  text-decoration: none;
+  color: #ffffff;
+  font-weight: 600;
+  font-style: normal;
 }
 
 @media (hover: hover) {
