--- a/blocks/page.css
+++ b/blocks/page.css
@@ -3,7 +3,7 @@
   font-size: 18px;
   color: #fff;
   background-color: #2a2c2f;
-  max-width: 1280px;
+  max-width: 100%;
   display: flex;
   flex-direction: column;
   row-gap: 92px;
