--- a/blocks/places.css
+++ b/blocks/places.css
@@ -71,7 +71,7 @@ margin: 0;
 
 .places__button {
   background: #0278fe;
-  color: #ffffff;
+  
   font-weight: 600px;
   border: none;
   border-radius: 4px;
@@ -85,6 +85,11 @@ margin: 0;
 
 .places__button:hover {
   cursor: pointer;
+}
+
+.places__button-link{
+  text-decoration: none;
+  color: #ffffff;
 }
 
 @media screen and (max-width: 1000px) and (min-width: 768px) {
