--- a/blocks/cover.css
+++ b/blocks/cover.css
@@ -34,31 +34,24 @@
   margin: 0 auto;
 }
 
-.cover__paragraph__edit{
+.cover__paragraph-edit{
   margin: 0;
 }
 
-.cover__button {
+.link-cover{
   background: #0278fe;
   border: none;
   border-radius: 4px;
   width: 198px;
   height: 48px;
   margin: 0 auto;
-}
-
-.cover__button-link{
   text-decoration: none;
   color: #ffffff;
   font-weight: 600;
-  font-style: normal;
+  padding-top: 22px;
 }
 
 @media (hover: hover) {
-  .cover__button:hover {
-    cursor: pointer;
-  }
-
   .cover:hover .cover__image {
     opacity: 20%;
   }
@@ -75,7 +68,5 @@
 
   .cover__content {
     row-gap: 16px;
-    width: 288px;
-    height: 163px;
   }
 }
