--- a/blocks/places.css
+++ b/blocks/places.css
@@ -75,7 +75,6 @@
   border-radius: 4px;
   width: 355px;
   height: 48px;
-  margin: 0 auto;
   text-decoration: none;
   text-align: center;
   color: #ffffff;
@@ -83,6 +82,7 @@
   grid-column: 1;
   grid-row: 4;
   padding-top: 22px;
+  font-size: 18px;
 }
 
 @media screen and (max-width: 1000px) and (min-width: 768px) {
@@ -168,14 +168,7 @@
   }
 
   .link {
-    background: #0278fe;
-    color: #ffffff;
-    font-weight: 600px;
-    border: none;
-    border-radius: 4px;
-    height: 48px;
-    width: 80%;
-    grid-column: 1;
-    grid-row: 5;
+    font-size: 14px;
+    width: 288px;
   }
 }
